fix alignment of pet cards when results doesnt return a full row

--- a/src/components/css/forms.css
+++ b/src/components/css/forms.css
@@ -2,3 +2,8 @@
     max-width: 350px !important;
     padding: 40px 40px;
 }
+
+.petCardAlignment {
+    display: flex;
+    flex: 0 0 0%;
+}
